--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,6 +20,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+    /* @font-face {
+      font-family: 'league_monoregular';
+      src: url('leaguemono-regular-webfont.woff2') format('woff2'),
+           url('leaguemono-regular-webfont.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+    @font-face {
+        font-family: 'league_monobold';
+        src: url('leaguemono-bold-webfont.woff2') format('woff2'),
+             url('leaguemono-bold-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+
+    } */
+    </style>
     <title>React App</title>
   </head>
   <body>
