--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,21 +22,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-    /* @font-face {
-      font-family: 'league_monoregular';
-      src: url('leaguemono-regular-webfont.woff2') format('woff2'),
-           url('leaguemono-regular-webfont.woff') format('woff');
-      font-weight: normal;
-      font-style: normal;
-    }
-    @font-face {
-        font-family: 'league_monobold';
-        src: url('leaguemono-bold-webfont.woff2') format('woff2'),
-             url('leaguemono-bold-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
 
-    } */
+
     </style>
     <title>React App</title>
   </head>
